--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,7 @@ author: 서창우
 
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Tags: "tags"
 
 # --- Logo --- #
 
